fix: replace deprecated grid-gap

--- a/packages/ui/src/assets/scss/layers/discover.scss
+++ b/packages/ui/src/assets/scss/layers/discover.scss
@@ -48,7 +48,7 @@
 
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      grid-gap: 16px;
+      gap: 16px;
       margin-bottom: 16px;
 
       > li > a {
