--- a/packages/ui/src/assets/scss/layers/uportal.scss
+++ b/packages/ui/src/assets/scss/layers/uportal.scss
@@ -23,7 +23,7 @@
   > .container {
     display: flex;
     flex-direction: column;
-    grid-gap: 32px;
+    gap: 32px;
     text-align: center;
     padding-top: 34px;
     padding-bottom: 16px;
@@ -53,7 +53,7 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: 60px;
-        grid-gap: 44px;
+        gap: 44px;
         padding: 24px;
         justify-content: center;
         align-items: center;
